# stPhysics

./: .gitignore  CMakeLists.txt
Assets/Shaders/: sample.frag  sample.vert
Src/: Application.cpp  Application.h  main.cpp
Src/stContainers/: RingBuffer.cpp  RingBuffer.h  String.cpp  String.h
Src/stEvents/: EventHandler.cpp  EventHandler.h
Src/stFiles/: InputStream.cpp  InputStream.h
Src/stGraphics/: ApplicationWindow.cpp  ApplicationWindow.h  GLEWWrapper.cpp  GLEWWrapper.h  GLFWInclude.h  GLWrapper.cpp  GLWrapper.h  Material.cpp  Material.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Tri.cpp  Tri.h
Src/stMaths/: Vec.h  Vec2.h  Vec3.cpp  Vec3.h  VecDeclarations.h
Src/stTypes/: Types.h  Vec2.h
Src/stUtils/: Assertions.h  ErrorHandling.h  FrameRateCounter.cpp  FrameRateCounter.h  Log.cpp  Log.h  NonCopyable.h  StaticClass.h
VisualStudio/: stPhysics.sln
VisualStudio/stPhysics/: stPhysics.vcxproj  stPhysics.vcxproj.filters
